<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sblue"
    android:id="@+id/paginaregisto">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logotipo"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginEmail"
        android:textColor="@color/white"
        android:hint="@string/emailHint"
        android:layout_below="@+id/logotipo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:textColor="@color/white"
        android:hint="@string/passwordHint"
        android:layout_below="@+id/loginEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/painelbotoes"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_below="@+id/loginPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:weightSum="1">



        <Button
            android:layout_width="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/loginBtnText"
            android:background="@drawable/botao_castanho"
            android:textColor="@color/texto_botao_castanho"
            android:id="@+id/loginBtn"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/registerBtnText"
            android:id="@+id/registerBtn"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao_branco"
            android:textColor="@color/texto_botao_branco"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</RelativeLayout>