<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/abc_action_bar_default_height_material"
    >
    <!--android:background="@color/material_deep_teal_500"-->

    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:weightSum="3"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:id="@+id/tabsLayout"-->
        <!--android:visibility="visible">-->

        <!--<Button-->
            <!--style="@style/TopBarBtn"-->
            <!--android:text="In"-->
            <!--android:id="@+id/inBtn" />-->

        <!--<Button-->
            <!--style="@style/TopBarBtn"-->
            <!--android:id="@+id/outBtn"-->
            <!--android:text="Out" />-->

        <!--<Button-->
            <!--style="@style/TopBarBtn"-->
            <!--android:text="Friends"-->
            <!--android:id="@+id/friendsBtn"-->
             <!--/>-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:weightSum="3"-->
        <!--android:layout_alignParentBottom="true">-->

        <!--<View-->
            <!--style="@style/SelectBar"-->
            <!--android:id="@+id/select_op_in" />-->
        <!--<View-->
            <!--style="@style/SelectBar"-->
            <!--android:id="@+id/select_op_out" />-->
        <!--<View-->
            <!--style="@style/SelectBar"-->
            <!--android:id="@+id/select_op_friends" />-->

    <!--</LinearLayout>-->






    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:layout_centerHorizontal="true"
        android:id="@+id/tabsLayout"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/inBtn"
            style="@style/TopBarBtn">
            <TextView
                style="@style/SelectBar"
                android:text="@string/bar_in"
                android:id="@+id/textViewIN"
                 />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/outBtn"
            style="@style/TopBarBtn">
            <TextView
                style="@style/SelectBar"
                android:text="@string/bar_out"
                android:id="@+id/textViewOut" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/friendsBtn"
            style="@style/TopBarBtn">
            <TextView
                style="@style/SelectBar"
                android:text="@string/bar_friends"
                android:id="@+id/textViewFriends"/>
        </RelativeLayout>







    </LinearLayout>







</RelativeLayout>
