<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sblue"
    android:id="@+id/paginaregisto2">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/nomes"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FBA046"
        android:gravity="center">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstName"
            android:id="@+id/firstname"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastName"
            android:id="@+id/lastname"
            android:layout_weight="0.5" />


    </LinearLayout>

    <RadioGroup
        android:layout_below="@id/nomes"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generos"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/female"
            android:layout_marginRight="30dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/male"
            android:layout_marginLeft="30dp"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FBA046"
        android:layout_below="@+id/generos"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:maxLength="2"
            android:id="@+id/dia"
            android:hint="DD"/>

        <Spinner
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/mesesSpinner"
            android:entries="@array/meses"
            android:prompt="@string/month_prompt"
            android:dropDownWidth="wrap_content"
            android:textAlignment="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:maxLength="4"
            android:id="@+id/ano"
            android:hint="YYYY"/>
    </LinearLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/counties"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/linearLayout"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/backToLoginPage"
            android:layout_weight="1"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:layout_weight="1"
            android:id="@+id/nextToRegister3" />
    </LinearLayout>

</RelativeLayout>